# hda-emu

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  ctljack.c  hda-ctlsh.c  hda-decode-pincfg.c  hda-decode-verb.c  hda-emu.c  hda-int.c  hda-log.c  hda-parse.c  hda-spec.c  hda_own_proc.c  jackctl.c  misc_wrapper.c  snd-control.c  snd-vmaster.c  snd-wrapper.c
codecs/: ad1882-sparta  ad1884-refboard  ad1981-hp-compaq-6720s  ad1981-hp-nc6400  ad1981-hp-nx6320  ad1981-hp-nx7300  ad1981-hp-nx9420  ad1981-hp2710-alsa-info  ad1981-lenovo-tp-t60  ad1983-dell-optiplex-745  ad1984-lenovo-thinkpad-t61  ad1984-lenovo-thinkpad-t61p  ad1984a-dell-optiplex755  ad1984a-hp  ad1984a-hp-2530p  ad1984a-hp-6530.txt  ad1984a-hp-8530w  ad1984a-hp-galileo  ad1984a-hp-zenith  ad1984a-lenovo-thinkpad-x300  ad1986a-samsung  ad1986a-samsung-asound  ad1986a-samsung-lspci  ad1986a-samsung-p50  ad1986a-samsung-r65  ad1986a-samsung-x60-student-edition  ad1986a-samsung2  ad1988a  ad1988b  ad1989b-asus-p5q-deluxe  alc1200-acer-5920g  alc1200-asus-m3a-h  alc1200-asus-p5ql-em-mobo  alc1200-asus-w90vp  alc1200-msi-gx620  alc1200-msi-gx720-061  alc1200-packardbell-m5120  alc259-dell-optiplex-380  alc259-ecs-915x-mobo  alc260-acer-aspire-9500  (+327 more)
codecs/canonical/: 92hd71b7x-dell-inspiron-1545-ccert-200910-4252  92hd71b7x-dell-inspiron-1545-ccert-200912-4896  92hd71b7x-dell-inspiron-1545-ccert-200912-4897  92hd73c1x5-dell-studio-xps-13-ccert-200910-4256  92hd73c1x5-dell-studio-xps-1340-ccert-200912-4895  92hd75b3x5-hp-probook-6550b-ccert-201101-6954  92hd81b1c5-dell-latitude-e6410-ccert-201001-5167  92hd81b1c5-dell-latitude-e6510-ccert-201103-7383  92hd81b1c5-dell-precision-m6500-ccert-201004-5601  92hd81b1c5-dell-vostro-1720-ccert-200910-4255  92hd81b1x5--hp-pavilion-g4-notebook-pc-ccert-201212-12396  92hd81b1x5--hp-probook-6570b-ccert-201306-13745  92hd81b1x5-dell-inspiron-15r-ccert-201010-6645  92hd81b1x5-dell-latitude-e4310-ccert-201103-7379  92hd81b1x5-dell-vostro-3300-ccert-201001-4955  92hd81b1x5-dell-vostro-3300-ccert-201004-5576  92hd81b1x5-dell-vostro-3400-ccert-201004-5571  92hd81b1x5-dell-vostro-3500-ccert-201001-4959  92hd81b1x5-dell-vostro-3500-ccert-201004-5574  92hd81b1x5-dell-vostro-3700-ccert-201001-4961  92hd81b1x5-dell-vostro-3700-ccert-201004-5579  92hd87b1-3-dell-inspiron-m5110-ccert-201105-8042  92hd87b1-3-dell-inspiron-m5110-ccert-201105-8043  92hd87b1-3-dell-inspiron-n5110-ccert-201012-6931  92hd87b1-3-dell-vostro-1440-ccert-201105-8046  92hd87b1-3-dell-vostro-3350-ccert-201101-6951  92hd87b1-3-dell-vostro-3550-ccert-201012-6933  92hd87b2-4--hp-mini-210-4000-ccert-201205-11017  92hd87b2-4--hp-pavilion-dm1-notebook-pc-ccert-201209-11793  92hd87b2-4--hp-pavilion-g4-notebook-pc-ccert-201209-11638  92hd87b2-4--hp-pavilion-g7-notebook-pc-ccert-201209-11633  92hd87b2-4--hp-pavilion-g7-notebook-pc-ccert-201209-11634  92hd87b2-4--hp-pavilion-g7-notebook-pc-ccert-201209-11640  92hd87b2-4--hp-pavilion-g7-notebook-pc-ccert-201209-11726  92hd89e3--hp-z1-g2-touch-workstation-ccert-201406-15258  92hd89e3--hp-z1-g2-touch-workstation-ccert-201406-15259  92hd90bxx-dell-latitude-e5420-ccert-201107-8259  92hd90bxx-dell-latitude-e5420m-ccert-201101-7173  92hd90bxx-dell-latitude-e6220-ccert-201101-7178  92hd90bxx-dell-latitude-e6220-ccert-201102-7187  (+567 more)
include/: Makefile.am  codec_config.h  hda-log.h  hda-missing-const.h  hda-types.h  wrapper.h
include/acpi/: acpi.h
include/asm/: unaligned.h
include/drm/: drm_audio_component.h  i915_component.h
include/linux/: acpi.h  async.h  atomic.h  bitmap.h  bitops.h  clocksource.h  delay.h  dell-led.h  device.h  dmi.h  err.h  firmware.h  init.h  input.h  kref.h  list.h  log2.h  mm.h  mod_devicetable.h  module.h  mutex.h  pci.h  pci_ids.h  pm.h  pm_runtime.h  regmap.h  slab.h  sort.h  spinlock.h  stat.h  sysfs.h  timecounter.h  timer.h  workqueue.h
include/sound/: asound.h  asoundef.h  control.h  core.h  driver.h  hda_chmap.h  hda_i915.h  hda_register.h  hda_regmap.h  hda_verbs.h  hdaudio.h  hwdep.h  info.h  jack.h  memalloc.h  pcm.h  tlv.h
kernel/: Makefile.am  README  hda_auto_parser.c  hda_beep.c  hda_bind.c  hda_codec.c  hda_eld.c  hda_generic.c  hda_hwdep.c  hda_jack.c  hda_own_proc.c  hda_proc.c  patch_analog.c  patch_atihdmi.c  patch_ca0110.c  patch_ca0132.c  patch_cirrus.c  patch_cmedia.c  patch_conexant.c  patch_hdmi.c  patch_intelhdmi.c  patch_nvhdmi.c  patch_realtek.c  patch_si3054.c  patch_sigmatel.c  patch_via.c
lib/: Makefile.am  array.c  hda_bus_type.c  hdac_bus.c  hdac_controller.c  hdac_device.c  hdac_regmap.c  hdac_stream.c  hdac_sysfs.c  hdmi_chmap.c
tester/: hda-emu-tester.py  runall.sh  runner.py  summary.py
